# karst-4.0

./: CMakeLists.txt  main.cpp
external_algorithms/MUMPS_5.6.0/src/: dmumps_ana_aux_m.mod  dmumps_ana_lr.mod  dmumps_buf.mod  dmumps_dynamic_memory_m.mod  dmumps_fac1_ldlt_m.mod  dmumps_fac1_lu_m.mod  dmumps_fac2_ldlt_m.mod  dmumps_fac2_lu_m.mod  dmumps_fac_asm_master_elt_m.mod  dmumps_fac_asm_master_m.mod  dmumps_fac_front_aux_m.mod  dmumps_fac_front_type2_aux_m.mod  dmumps_fac_lr.mod  dmumps_fac_omp_m.mod  dmumps_fac_par_m.mod  dmumps_fac_s_is_pointers_m.mod  dmumps_facsol_l0omp_m.mod  dmumps_load.mod  dmumps_lr_core.mod  dmumps_lr_data_m.mod  dmumps_lr_stats.mod  dmumps_lr_type.mod  dmumps_mpi3_mod.mod  dmumps_ooc.mod  dmumps_ooc_buffer.mod  dmumps_parallel_analysis.mod  dmumps_save_restore.mod  dmumps_save_restore_files.mod  dmumps_sol_es.mod  dmumps_sol_l0omp_m.mod  dmumps_sol_lr.mod  dmumps_static_ptr_m.mod  dmumps_struc_def.mod  dmumps_tps_m.mod  mumps_ana_blk_m.mod  mumps_ana_omp_m.mod  mumps_ana_ord_wrappers.mod  mumps_build_sort_index_elt_m.mod  mumps_build_sort_index_m.mod  mumps_ddll.mod  (+13 more)
simulation_setups/1D/hexagonal/: config.txt  run_1D.sh
src/: all_enums.h  read_config.h  units.h  utils.h
src/analizing/: percolation.h
src/analyzing/: AnalizePattern.h  AnalizePatternConfig.h
src/chemistry/: GenericKinetics.h  LinearKintetics.h  ReactionConfig.h  ReactionKinetics.h  prepare_chemical_kinetics.h  reaction_config.h  reactions_kinetic.h
src/dynamics/: LeapFrogStep.h  Simulation.h  SimulationConfig.h  SimulationState.h
src/dynamics/SimulationSteps/: GenericSimulationStep.h  SimulateConcentration.h  SimulateFlow.h  SimulateGeometry.h  SimulatePressure.h  SimulateSizes.h  SimulateTopology.h
src/external_algorithms/CsvParser/: csv.h
src/external_algorithms/triangulation/: triangulation.h
src/import_export/: Logger.h  OutStream.h  PrintingConfig.h  PrintingModule.h  VTK_by_heand.h  VTK_write.h  printing_net_elements.h  printing_primitives.h  printing_ps.h  read_net_from_files.h
src/net_elements/: GenericElement.h  GenericElement_impl.h  Grain.h  Node.h  Pore.h
src/network/: Network.h  NetworkConfig.h  NetworkState.h  NetworkTopologyConfig.h  network_generators.h  network_topo_generators.h
src/network/configs/: NetworkChemistryConfig.h  NetworkPrintingConfig.h  NetworkTopologyConfig.h
src/network/network_topo_generator/: create_2D_triangulation.h  create_cubic_network.h  create_hexagonal_network.h  network_topo_generator.h  read_from_csv.h
src/simulation/: EulerStep.h  Simulation.h  SimulationConfig.h  SimulationState.h  do_one_leap_frog_state.h  euler_step.h
src/simulation/SimulationSteps/: GenericSimulationStep.h  SimulateConcentration.h  SimulateFlow.h  SimulateGeometry.h  SimulateMerging.h  SimulatePressure.h
